# jax-with-xarray

./: .gitignore  README.md  figs.py  nnx.py  opt.py  pyproject.toml  url.txt
